k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingcart
  labels:
    app: shoppingcart
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shoppingcart
  template:
    metadata:
      labels:
        app: shoppingcart
    spec:
      containers:
        - name: shoppingcart
          image: timagx/nodeapp:v1
          ports:
            - containerPort: 3000
