k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shoppingcart-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: shoppingcart.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shoppingcart
                port:
                  number: 80
